1.添加rabbitmq生产端100%可靠性投递解决方案

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,10 +12,10 @@ server.tomcat.uri-encoding=UTF-8
 
 #Redis
 spring.redis.host=
-spring.redis.port=6379
+spring.redis.port=
 #reids超时连接时间
 spring.redis.timeout=1000
-spring.redis.password=
+spring.redis.password=xiaoma
 #连接池最大连接数
 spring.redis.pool.max-active=1000
 #连接池最大空闲数
@@ -24,11 +24,11 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.max-wait=1000
 
 #mybatis配置
-mybatis.type-aliases-package=com.cmazxiaoma.seckill
+mybatis.type-aliases-package=com.cmazxiaoma.seckill.**.model
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=3000
-mybatis.mapper-locations=classpath:com/cmazxiaoma/seckill/dao/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 # 当出现404错误的时候，抛出异常即可
 spring.mvc.throw-exception-if-no-handler-found=true
@@ -53,7 +53,7 @@ security.basic.enabled=false
 
 #rabbtisMQ配置
 spring.rabbitmq.host=
-spring.rabbitmq.port=5672
+spring.rabbitmq.port=
 spring.rabbitmq.username=
 spring.rabbitmq.password=
 spring.rabbitmq.virtual-host=/
@@ -77,6 +77,26 @@ spring.rabbitmq.template.retry.max-attempts=3
 spring.rabbitmq.template.retry.max-interval=10000
 #每次重试的因子是1.0 等差
 spring.rabbitmq.template.retry.multiplier=1.0
+#
+#RabbitMQ的消息确认有两种。
+
+#一种是消息发送确认。这种是用来确认生产者将消息发送给交换器，交换器传递给队列的过程中，
+# 消息是否成功投递。
+#发送确认分为两步，一是确认是否到达交换器，二是确认是否到达队列。
+#第二种是消费接收确认。这种是确认消费者是否成功消费了队列中的消息。
+# 确认消息发送成功，通过实现ConfirmCallBack接口，消息发送到交换器Exchange后触发回调
+spring.rabbitmq.publisher-confirms=true
+# 实现ReturnCallback接口，如果消息从交换器发送到对应队列失败时触发
+# （比如根据发送消息时指定的routingKey找不到队列时会触发）
+spring.rabbitmq.publisher-returns=true
+# 消息消费确认，可以手动确认
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#在消息没有被路由到合适队列情况下会将消息返还给消息发布者
+#当mandatory标志位设置为true时，如果exchange根据自身类型和消息routingKey无法找到一个合适的queue存储消息，
+# 那么broker会调用basic.return方法将消息返还给生产者;
+# 当mandatory设置为false时，出现上述情况broker会直接将消息丢弃;
+# 通俗的讲，mandatory标志告诉broker代理服务器至少将消息route到一个队列中，否则就将消息return给发送者;
+spring.rabbitmq.template.mandatory=false
 
 #Thymeleaf配置
 spring.thymeleaf.prefix=classpath:/templates/
@@ -89,7 +109,7 @@ spring.thymeleaf.mode=HTML5
 
 #驱动配置信息
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.url=
+spring.datasource.druid.url=jdbc:mysql://:3306/miaosha?useSSL=false&useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=
 spring.datasource.druid.password=
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
